tests/sources/invalid/match/match_duplicate_field_binding.fire
// Invalid: the same payload field is bound more than once in one pattern.
// EXPECT: semantic error

enum Shape {
    Rectangle(width: float64, height: float64),
    Point
}

s: Shape = Shape.Point;
match s {
    Shape.Rectangle(width, width: w2) -> { }  //~ ERROR FS-SEM-0001 @5
    Shape.Point -> { }
}
